# Tresc3-scan-algorithm-gl

./: CMakeLists.txt  README.md  package.xml
launch/: tresc3_scan_algorithm.launch  tresc3_scan_algorithm_gl.launch  view_tresc3_scan_algorithm.launch  view_tresc3_scan_algorithm_gl.launch
rviz/: tresc3_scan_config.rviz
src/: tresc3_scan_node.cpp
